<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.auth.LoginActivity">


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="132dp"
        android:width="120dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/login"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.672" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="132dp"
        android:width="120dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.676" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:drawableRight="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bioAuthButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="81dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/fingerprint"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        android:paddingLeft="5dp"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>