...
    <string name="unassigned_tasks">Unassigned Tasks</string>
    <string name="open_task_creator">Create Task</string>
    <string name="register_for_task">Register Task</string>
    <string name="open_activity_3">Open Activity 3</string>
    <string name="open_login_activity">Open Login Activity</string>
    <string name="tasks_information">Task Info</string>
    <string name="logout">Logout</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="maintenance">Maintenance</string>
    <string name="weeding">Weeding</string>
    <string name="watering">Watering</string>
    <string name="harvesting">Harvesting</string>
    <string name="register_here">Don\'t have an account? Register here</string>
...
