...
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="240dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAlignment="center"
           android:layout_marginTop="70dp"
            android:fontFamily="@font/monteserrat"
...
                android:paddingTop="2dp"
                android:paddingBottom="10dp"
                android:rowCount="3"
                tools:ignore="RtlSymmetry">

                <androidx.cardview.widget.CardView
                    android:id="@+id/taskCreator"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/calendarButton"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/overDueTasks"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/taskList"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/gardenInformation"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/plantInfo"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addPlantType"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
...

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addTaskType"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
...
