<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupform"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.auth.SignUpActivity">

    <EditText
        android:id="@+id/usernameInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:textColor="@color/textColor"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:drawableEnd="@drawable/ic_baseline_account_circle_24"
        android:drawableRight="@drawable/ic_baseline_account_circle_24"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/emailInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:drawableRight="@drawable/ic_baseline_email_24"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputField" />

    <EditText
        android:id="@+id/passwordInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputField" />

    <EditText
        android:id="@+id/confirmPasswordInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="70dp"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/rajdhani_bold"
        android:hint="@string/reenter"
        android:inputType="textPassword"

        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputField" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/rajdhani_semibold"
        android:text="@string/sign_up"
       android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputField" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="19dp"
        android:text="@string/experienced_gardener"
        android:fontFamily="@font/rajdhani_semibold"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputField" />


</androidx.constraintlayout.widget.ConstraintLayout>